<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".presentation.signUp.view.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/fragmentSignUp_create_new_account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableimage_photo_user"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:background="@drawable/background_shapeableimageview"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/circleShapeableImageView" />

            <TextView
                android:id="@+id/textview_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragmentSignUp_add_image"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableimage_delete_photo_user"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="top|end"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_remove_circle"
                android:tint="@color/orange"
                android:visibility="gone"
                app:shapeAppearanceOverlay="@style/circleShapeableImageView" />

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/fragmentSignUp_fullname"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:expandedHintEnabled="false"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_fullname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_edittext"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/primary_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/fragmentSignUp_email"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:expandedHintEnabled="false"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_edittext"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/primary_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/fragmentSignUp_password"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:expandedHintEnabled="false"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_edittext"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/primary_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/fragmentSignUp_confirm_password"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="false"
            app:expandedHintEnabled="false"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_edittext"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/primary_text"
                app:errorEnabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_back"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/fragmentSignUp_back"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_sign_up"
                    style="?attr/materialButtonStyle"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:text="@string/fragmentSignUp_sign_up"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressbar_sign_up"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>