<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".presentation.profile.CurrentUserProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_current_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_60sdp"
                android:maxLines="1"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageview_logout"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_logout"
                app:tint="@color/white" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/_24sdp"
            android:paddingEnd="@dimen/_24sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="@drawable/background_view_circle">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/shapeableimage_photo_user"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_shapeableimageview"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/circleShapeableImageView" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/fragmentCurrentUserProfile_fullname"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_edittext"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/primary_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/fragmentCurrentUserProfile_date_birth"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_calendar_month">

                <com.santalu.maskara.widget.MaskEditText
                    android:id="@+id/edittext_date_birth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_edittext"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:textColor="@color/primary_text"
                    app:mask="xx/xx/xxxx"
                    app:maskCharacter="x"
                    app:maskStyle="completable"
                    app:textInputLayoutFocusedRectEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/fragmentCurrentUserProfile_email"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_edittext"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primary_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_update_profile"
                    style="?attr/materialButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:text="@string/fragmentCurrentUserProfile_update_profile"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressbar_update_profile"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/fragmentCurrentUserProfile_password"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="password_toggle"
                app:expandedHintEnabled="false"
                app:hintAnimationEnabled="false"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_edittext"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/primary_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_change_password"
                    style="?attr/materialButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:text="@string/fragmentCurrentUserProfile_change_password"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressbar_change_password"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>